--- a/tutorials/BLR_protocol/BLR_normativemodel_protocol.ipynb
+++ b/tutorials/BLR_protocol/BLR_normativemodel_protocol.ipynb
@@ -591,7 +591,7 @@
    },
    "outputs": [],
    "source": [
-    "all_data_covariates = pd.get_dummies(all_data_covariates, columns=['site'])"
+    "all_data_covariates = pd.get_dummies(all_data_covariates, columns=['site'], dtype=float)"
    ]
   },
   {
