Add protocols/BLR_protocol to path

--- a/tutorials/BLR_protocol/BLR_normativemodel_protocol.ipynb
+++ b/tutorials/BLR_protocol/BLR_normativemodel_protocol.ipynb
@@ -916,7 +916,7 @@
    "outputs": [],
    "source": [
     "# set this path to wherever your ROI_models folder is located (where you copied all of the covariate & response text files to in Step 4)\n",
-    "data_dir = os.path.join(wdir,'ROI_models')\n",
+    "data_dir = os.path.join(wdir,'tutorials/BLR_protocol/ROI_models')\n",
     "\n",
     "# Create a cubic B-spline basis (used for regression)\n",
     "xmin = 10#16 # xmin & xmax are the boundaries for ages of participants in the dataset\n",
